# tsys_file_service

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  main.py
app/api/: file_service.py
app/core/: config.py
app/services/: s3_client.py
tests/test_api/: test_file_service.py
