[tool.poetry]
name = "iberia-fastapi"
version = "0.1.0"
description = ""
authors = ["simongcs <12417560+simongcs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
python-multipart = "^0.0.10"
boto3 = "^1.35.24"
uvicorn = "^0.30.6"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
moto = "^5.0.14"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
